# MetaCARP_Proyecto

./: .gitignore  README.md  __init__.py  abejas.py  busqueda_tabu.py  cargar_matrices.py  cargar_soluciones_iniciales.py  costo_solucion.py  cuckoo_search.py  etiquetar_soluciones_iniciales.py  factibilidad.py  feasibility_labels.json  grafo_ruta.py  instances.py  metaheuristicas_utils.py  pyproject.toml  recocido_simulado.py  reporte_solucion.py  vecindarios.py
.github/agents/: data-analysis.agent.md
MetaCARP_Proyecto/docs/: colonia_abejas.md  cuckoo_search.md
docs/: busqueda_tabu.md  cuckoo_search.md  experimentacion.md  generacion_vecinos.md  recocido_simulado.md
metacarp/: __init__.py  abejas.py  busqueda_indices.py  busqueda_tabu.py  cargar_grafos.py  cargar_matrices.py  cargar_soluciones_iniciales.py  cuckoo_search.py  evaluador_costo.py  instances.py  metaheuristicas_utils.py  recocido_simulado.py  solucion_formato.py  vecindarios.py
pseudocodigos/: deadhanging_nodes_figure.tex  initial_solution_structure.tex  metacarp_algorithms.tex  neighbor_generation.tex
scripts/: analysis_first_exp_20260429.ipynb  experimentos.py  run_sa_automatico.py  testing.py
scripts/experimentos/first_round_20260427_194816/sa/: sa_gdb10_first_round_202627041948.csv  (+22 more)
scripts/experimentos/random_seed_20260427_213234/: run_info.txt
scripts/experimentos/random_seed_w_params_20260427_214859/: run_info.txt
scripts/experimentos/sa/: sa_gdb19_tesis_202627041531.csv  sa_gdb19_tesis_202627041555.csv  sa_kshs1_tesis_202627041531.csv  sa_kshs1_tesis_202627041555.csv
(+101 files in other folders)
