[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacarp"
version = "0.2.0"
description = "CARP thesis utilities: instance loading and metaheuristics (SA, Tabu, ABC, Cuckoo) with fast vectorized cost evaluation and optional GPU acceleration."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "networkx>=3.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Nota: fijamos la cota superior <14 porque cupy-cuda12x 14.0.x arrastra
# `cutensor` v2 que requiere libs de CUDA 13 (libcublasLt.so.13) y rompe
# la importación con paquetes CUDA 12. La rama 13.x es la LTS estable.
gpu-cuda11 = ["cupy-cuda11x>=12.0,<14"]
gpu-cuda12 = ["cupy-cuda12x>=13.0,<14"]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["metacarp"]

[tool.setuptools.package-data]
metacarp = [
    "PickleInstances/*.pkl",
    "Grafos/*.gexf",
    "Grafos/*.png",
    "Matrices/*.pkl",
    "InitialSolution/*.pkl",
]
